[package]
name = "lumen-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lumen-core = { workspace = true }
# Exception #3 (§5): TLS / X.509 / crypto. Своя реализация — security antipattern.
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
# Provisional accelerator (§5): Brotli decompressor для HTTP `Content-Encoding: br`.
# Trait-anchor — `ContentDecoder` в lumen-core::ext. Graduation criterion: edge-case
# в формате (RFC 7932 стабилен, реалистично — никогда). Pure-Rust, без unsafe-в-логике.
brotli-decompressor = "5"
# Exception #3 (§5): crypto. ECDSA P-256 (COSE ES256, alg -7) для WebAuthn passkey
# подписей в VirtualAuthenticator (trait-anchor: lumen-core::ext::CredentialProvider).
# Pure-Rust RustCrypto, детерминированные RFC 6979 подписи (RNG не нужен для sign).
# Своя реализация ECDSA — security antipattern.
p256 = { version = "0.13", features = ["ecdsa"] }
# SHA-256 для clientDataHash и rpIdHash в WebAuthn (W3C WebAuthn L2 §6.1).
sha2 = "0.10"
# Permanent: OS CSPRNG для генерации passkey-ключей и credential ID в
# VirtualAuthenticator. Delegates directly to OS (как в lumen-js Web Crypto).
getrandom = "0.2"
# HTTP Cache (RFC 7234): LRU cache with size-based eviction for HTTP responses.
# Pure-Rust, no unsafe in logic. Trait-anchor: none (internal HTTP cache impl).
lru = "0.12"
# Persistent HTTP cache backend (C-2). Bundled SQLite — same rationale as lumen-storage.
# Trait-anchor: DiskHttpCache (HttpCacheBackend impl). No graduation — disk I/O needs OS SQLite.
rusqlite = { workspace = true }
# Provisional accelerator (§5): DEFLATE for WebSocket permessage-deflate (RFC 7692, C-3).
# Trait-anchor: none (internal WebSocket compression). Same crate used by lumen-image for
# PNG ICC profiles. Graduation criterion: would need no-std DEFLATE for WASM target (not planned).
flate2 = { workspace = true }
# Exception #6 (§5): regex — EasyList /regex/ pattern matching; same workspace entry used
# by find-in-page. Trait-anchor: RequestFilter (easylist.rs /regex/ rule variant).
regex = { workspace = true }
