[package]
name = "lumen-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lumen-network-service"
path = "src/bin/network_service.rs"

[dependencies]
lumen-core = { workspace = true }
# PH1-4: IPC channel for RemoteNetworkTransport and network service binary.
# Permanent — network service process is a long-term architecture goal (ADR-009).
lumen-ipc = { workspace = true }
# Exception #3 (§5): TLS / X.509 / crypto. Своя реализация — security antipattern.
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
# Provisional accelerator (§5): Brotli decompressor для HTTP `Content-Encoding: br`.
# Trait-anchor — `ContentDecoder` в lumen-core::ext. Graduation criterion: edge-case
# в формате (RFC 7932 стабилен, реалистично — никогда). Pure-Rust, без unsafe-в-логике.
brotli-decompressor = "5"
# Exception #3 (§5): crypto. ECDSA P-256 (COSE ES256, alg -7) для WebAuthn passkey
# подписей в VirtualAuthenticator (trait-anchor: lumen-core::ext::CredentialProvider).
# Pure-Rust RustCrypto, детерминированные RFC 6979 подписи (RNG не нужен для sign).
# Своя реализация ECDSA — security antipattern.
p256 = { version = "0.13", features = ["ecdsa"] }
# SHA-256 для clientDataHash и rpIdHash в WebAuthn (W3C WebAuthn L2 §6.1).
sha2 = "0.10"
# Exception #3 (§5): crypto. AES-128-GCM AEAD packet protection (RFC 9001 §5.3)
# для QUIC/HTTP/3. Тот же RustCrypto-крейт уже используют lumen-js (Web Crypto) и
# lumen-storage; pure-Rust, без native-кода. Своя реализация AEAD — security antipattern.
aes-gcm = "0.10"
# Exception #3 (§5): crypto. Сырой AES-128 блок (ECB) для QUIC header protection
# (RFC 9001 §5.4) — маска строится из AES(hp_key, sample). Транзитивная зависимость
# aes-gcm, объявлена явно ради BlockEncrypt. Своя реализация AES — security antipattern.
aes = "0.8"
# Permanent: OS CSPRNG для генерации passkey-ключей и credential ID в
# VirtualAuthenticator. Delegates directly to OS (как в lumen-js Web Crypto).
getrandom = "0.2"
# HTTP Cache (RFC 7234): LRU cache with size-based eviction for HTTP responses.
# Pure-Rust, no unsafe in logic. Trait-anchor: none (internal HTTP cache impl).
lru = "0.12"
# Persistent HTTP cache backend (C-2). Bundled SQLite — same rationale as lumen-storage.
# Trait-anchor: DiskHttpCache (HttpCacheBackend impl). No graduation — disk I/O needs OS SQLite.
rusqlite = { workspace = true }
# Provisional accelerator (§5): DEFLATE for WebSocket permessage-deflate (RFC 7692, C-3).
# Trait-anchor: none (internal WebSocket compression). Same crate used by lumen-image for
# PNG ICC profiles. Graduation criterion: would need no-std DEFLATE for WASM target (not planned).
flate2 = { workspace = true }
# Exception #6 (§5): regex — EasyList /regex/ pattern matching; same workspace entry used
# by find-in-page. Trait-anchor: RequestFilter (easylist.rs /regex/ rule variant).
regex = { workspace = true }
