[package]
name = "lumen-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lumen-network-service"
path = "src/bin/network_service.rs"

[dependencies]
lumen-core = { workspace = true }
# PH1-4: IPC channel for RemoteNetworkTransport and network service binary.
# Permanent — network service process is a long-term architecture goal (ADR-009).
lumen-ipc = { workspace = true }
# Exception #3 (§5): TLS / X.509 / crypto. Своя реализация — security antipattern.
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
# Provisional accelerator (§5): Brotli decompressor для HTTP `Content-Encoding: br`.
# Trait-anchor — `ContentDecoder` в lumen-core::ext. Graduation criterion: edge-case
# в формате (RFC 7932 стабилен, реалистично — никогда). Pure-Rust, без unsafe-в-логике.
brotli-decompressor = "5"
# Exception #3 (§5): crypto. ECDSA P-256 (COSE ES256, alg -7) для WebAuthn passkey
# подписей в VirtualAuthenticator (trait-anchor: lumen-core::ext::CredentialProvider).
# Pure-Rust RustCrypto, детерминированные RFC 6979 подписи (RNG не нужен для sign).
# Своя реализация ECDSA — security antipattern.
p256 = { version = "0.13", features = ["ecdsa"] }
# Exception #3 (§5): crypto. ECDSA P-384/P-521 signature verification for the TLS 1.3
# `ecdsa_secp384r1_sha384` / `ecdsa_secp521r1_sha512` CertificateVerify schemes
# (RFC 8446 §4.2.3) in QUIC/HTTP/3 peer authentication — the larger NIST-curve siblings
# of the p256 `ecdsa_secp256r1_sha256` scheme, signed by P-384/P-521 certificates. Same
# RustCrypto `ecdsa`/`signature` v2 family as p256, pure-Rust, verify-only (no key
# generation). Своя реализация ECDSA — security antipattern.
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
# SHA-256 для clientDataHash и rpIdHash в WebAuthn (W3C WebAuthn L2 §6.1).
sha2 = "0.10"
# Exception #3 (§5): crypto. AES-128-GCM AEAD packet protection (RFC 9001 §5.3)
# для QUIC/HTTP/3. Тот же RustCrypto-крейт уже используют lumen-js (Web Crypto) и
# lumen-storage; pure-Rust, без native-кода. Своя реализация AEAD — security antipattern.
aes-gcm = "0.10"
# Exception #3 (§5): crypto. Сырой AES-128 блок (ECB) для QUIC header protection
# (RFC 9001 §5.4) — маска строится из AES(hp_key, sample). Транзитивная зависимость
# aes-gcm, объявлена явно ради BlockEncrypt. Своя реализация AES — security antipattern.
aes = "0.8"
# Permanent: OS CSPRNG для генерации passkey-ключей и credential ID в
# VirtualAuthenticator. Delegates directly to OS (как в lumen-js Web Crypto).
getrandom = "0.2"
# Exception #3 (§5): crypto. X25519 (Curve25519) ECDH для TLS 1.3 key_share
# (RFC 7748 / RFC 8446 §4.2.8) — превращает пару ephemeral key_share в (EC)DHE
# shared secret, который feed'ит tls_schedule::handshake_secret для QUIC/HTTP/3.
# Pure-Rust dalek-cryptography, constant-time скалярное умножение. Своя
# реализация Curve25519 — security antipattern.
x25519-dalek = "2"
# Exception #3 (§5): crypto. Ed25519 (EdDSA over Curve25519) signature verification
# for the TLS 1.3 `ed25519` CertificateVerify scheme (RFC 8446 §4.2.3, RFC 8032) in
# QUIC/HTTP/3 peer authentication. Reuses curve25519-dalek 4.x already in the tree
# (transitive via x25519-dalek); same dalek-cryptography family, pure-Rust,
# constant-time. Verify-only (no signing key generation). Своя реализация Ed25519 —
# security antipattern.
ed25519-dalek = "2"
# Exception #3 (§5): crypto. RSASSA-PSS with SHA-256 signature verification for the
# TLS 1.3 `rsa_pss_rsae_sha256` CertificateVerify scheme (RFC 8446 §4.2.3, RFC 8017)
# in QUIC/HTTP/3 peer authentication — the most widely deployed server-certificate
# signature scheme. Pure-Rust RustCrypto, reuses the sha2 already in the tree;
# verify-only (no key generation). Своя реализация RSA — security antipattern.
rsa = "0.9"
# HTTP Cache (RFC 7234): LRU cache with size-based eviction for HTTP responses.
# Pure-Rust, no unsafe in logic. Trait-anchor: none (internal HTTP cache impl).
lru = "0.12"
# Persistent HTTP cache backend (C-2). Bundled SQLite — same rationale as lumen-storage.
# Trait-anchor: DiskHttpCache (HttpCacheBackend impl). No graduation — disk I/O needs OS SQLite.
rusqlite = { workspace = true }
# Provisional accelerator (§5): DEFLATE for WebSocket permessage-deflate (RFC 7692, C-3).
# Trait-anchor: none (internal WebSocket compression). Same crate used by lumen-image for
# PNG ICC profiles. Graduation criterion: would need no-std DEFLATE for WASM target (not planned).
flate2 = { workspace = true }
# Exception #6 (§5): regex — EasyList /regex/ pattern matching; same workspace entry used
# by find-in-page. Trait-anchor: RequestFilter (easylist.rs /regex/ rule variant).
regex = { workspace = true }

[dev-dependencies]
# Test-only: OS CSPRNG (rand_core 0.6 `OsRng`, the version `rsa` 0.9 signs with) to
# supply the PSS salt when producing signature fixtures in the RSASSA-PSS
# CertificateVerify round-trip tests. Verification is salt-length agnostic, so only
# the signing side needs entropy; reuses the rand_core 0.6 already in the tree.
rand_core = { version = "0.6", features = ["getrandom"] }
