[package]
name = "lumen-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen browser shell: UI process and entry point"

[[bin]]
name = "lumen"
path = "src/main.rs"

[features]
# Phase 2 defaults: femtovg primary + wgpu fallback (ADR-010 RB-9).
# Both must be in default so that #[cfg(feature = "backend-*")] guards in
# backend_factory.rs compile the real backends, not the stub error paths.
default = ["backend-femtovg", "backend-wgpu", "quickjs"]

# Enable QuickJS JavaScript engine (rquickjs). Without this feature the shell
# falls back to NullJsRuntime which silently ignores all inline scripts.
quickjs = ["dep:lumen-js"]

# femtovg rendering backend — Phase 2 default (ADR-010 RB-9).
backend-femtovg = ["lumen-paint/backend-femtovg"]

# wgpu rendering backend — Phase 1 / Phase 2 fallback (ADR-010 §Migration path).
# Use when femtovg is unavailable or LUMEN_BACKEND=wgpu is set.
# cargo run -p lumen-shell --no-default-features --features backend-wgpu,quickjs
backend-wgpu = ["lumen-paint/backend-wgpu"]

[dependencies]
lumen-core.workspace = true
lumen-a11y.workspace = true
lumen-devtools.workspace = true
lumen-knowledge.workspace = true
lumen-storage.workspace = true
lumen-js = { workspace = true, optional = true }
lumen-network.workspace = true
lumen-html-parser.workspace = true
lumen-css-parser.workspace = true
lumen-dom.workspace = true
lumen-layout.workspace = true
# Phase 2: backend features are activated via [features] default above (ADR-010 RB-9).
lumen-paint = { workspace = true }
lumen-font.workspace = true
lumen-encoding.workspace = true
lumen-image = { workspace = true, features = ["avif"] }
lumen-driver.workspace = true
lumen-mcp.workspace = true

# Exception #1 из §5: OS event loop + окна.
winit.workspace = true

# Exception #6 из §5: regex — find-in-page с regex; стандарт де-факто в Rust.
regex.workspace = true
# Exception #8 из §5: pdf-writer — PDF-сериализация для --print-to-pdf.
pdf-writer.workspace = true
