[package]
name = "lumen-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen browser shell: UI process and entry point"

[[bin]]
name = "lumen"
path = "src/main.rs"

[features]
# Both rendering backends are compiled in by default so that #[cfg(feature =
# "backend-*")] guards in backend_factory.rs compile the real backends, not the
# stub error paths. At runtime, ADR-017 probes and prefers wgpu (Vulkan → GL →
# DX12 on Windows) as the live default render path; femtovg is the
# init-failure fallback and an explicit `LUMEN_BACKEND=femtovg` override
# (supersedes the older ADR-010 RB-9 femtovg-primary ordering — that ADR's
# *compile-time* "both backends in default" wiring still holds, only the
# *runtime* preference flipped).
# Ph3 S12 cutover (ADR-018): V8 replaces QuickJS as the default JS engine.
# A plain `cargo build -p lumen-shell` (no extra --features) already ships the
# fastest default combination: wgpu (probed) + V8.
default = ["backend-femtovg", "backend-wgpu", "v8"]

# Enable QuickJS JavaScript engine (rquickjs). Kept as an opt-in rollback path
# after the S12 cutover (`docs/tasks/ph3-v8-migration.md`); full removal of the
# rquickjs implementation is deferred to the follow-up S12b slice. Without
# either `quickjs` or `v8` the shell falls back to `NullJsRuntime`, which
# silently ignores all inline scripts.
quickjs = ["dep:lumen-js", "lumen-js/webgpu"]

# Enable the V8 JavaScript engine (rusty_v8), Ph3 V8 migration (docs/tasks/ph3-v8-migration.md).
# Default engine as of the S12 cutover (ADR-018). `quickjs` and `v8` may both be
# compiled in at once (both sets of natives build), but only one engine actually
# runs: `quickjs` takes priority at compile time over `v8` via #[cfg] guards in
# main.rs, so the (non-default) `quickjs` feature is only useful for A/B rollback
# testing: `cargo run -p lumen-shell --features quickjs` (with default `v8` still on,
# quickjs wins) or `--no-default-features --features backend-femtovg,backend-wgpu,quickjs`.
v8 = ["dep:lumen-js", "lumen-js/v8-backend"]

# femtovg rendering backend — the runtime fallback used only when the wgpu
# probe fails to init, or via an explicit `LUMEN_BACKEND=femtovg` override
# (ADR-017; previously the ADR-010 RB-9 default before the wgpu flip).
backend-femtovg = ["lumen-paint/backend-femtovg"]

# wgpu rendering backend — the live default render path (ADR-017), probe-
# selected at startup (Vulkan → GL → DX12 on Windows).
# cargo run -p lumen-shell --no-default-features --features backend-wgpu,v8
backend-wgpu = ["lumen-paint/backend-wgpu"]

# Optional local AI layer (§12.5, §12.8; docs/tasks/ph3-ai-module.md, ADR-019).
# NOT in default — the basic bundle stays exactly as-is (NullAiBackend, no
# lumen-ai compiled in). Enable with --features ai.
ai = ["dep:lumen-ai"]

[dependencies]
lumen-core.workspace = true
# PH1-4: IPC to the out-of-process network service (NetworkServiceHandle, --network-service).
lumen-ipc.workspace = true
# PH3-2: WebDriver BiDi server extracted to standalone crate.
lumen-bidi-server.workspace = true
lumen-a11y.workspace = true
lumen-devtools.workspace = true
lumen-knowledge.workspace = true
lumen-storage.workspace = true
# Optional local AI layer (feature "ai"), see docs/tasks/ph3-ai-module.md + ADR-019.
lumen-ai = { workspace = true, optional = true }
lumen-js = { workspace = true, optional = true }
lumen-network.workspace = true
lumen-html-parser.workspace = true
lumen-css-parser.workspace = true
lumen-dom.workspace = true
lumen-layout.workspace = true
# Phase 2: backend features are activated via [features] default above (ADR-010 RB-9).
# cpu-render: deterministic tiny-skia rasterizer used by the headless `--screenshot` CLI.
lumen-paint = { workspace = true, features = ["cpu-render"] }
lumen-font.workspace = true
lumen-encoding.workspace = true
lumen-image = { workspace = true, features = ["avif"] }
lumen-driver.workspace = true
lumen-mcp.workspace = true

# Exception #1 из §5: OS event loop + окна.
winit.workspace = true

# Exception #6 из §5: regex — find-in-page с regex; стандарт де-факто в Rust.
regex.workspace = true
# Exception #8 из §5: pdf-writer — PDF-сериализация для --print-to-pdf.
pdf-writer.workspace = true
# Provisional (PH3-3): cross-platform audio capture for getUserMedia({audio}).
# cpal is the only pure-Rust cross-platform audio I/O library; it maps to
# WASAPI on Windows and ALSA on Linux.  Alternative: raw windows-rs + alsa
# crates would be 2 platform-specific deps with 5x more boilerplate.
# Graduation: permanent if Lumen ships a native audio capture service;
# removed otherwise (replace with a lighter platform-specific impl).
cpal = "0.15"
serde_json = "1.0"
# Provisional (PH3-11): audio playback for HTMLAudioElement Phase 1.
# rodio is the standard pure-Rust audio playback library; wraps cpal underneath.
# Graduation: permanent if Lumen ships a native audio playback service.
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3", "flac", "vorbis"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
