[package]
name = "lumen-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: KV-хранилище с origin-партиционированием (cookies, history, profile)"

[dependencies]
lumen-core.workspace = true
rusqlite.workspace = true
# Provisional accelerator (§5): Public Suffix List как compiled-in static
# таблица (без runtime I/O, без зависимостей). Trait-anchor — `PublicSuffixList`
# в lumen-core::ext. Graduation criterion: реалистично — никогда (формат
# PSL стабилен, обновления списка приходят снаружи через bump версии crate-а).
psl = "2"
