[package]
name = "lumen-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: KV-хранилище с origin-партиционированием (cookies, history, profile)"

[dependencies]
lumen-core.workspace = true
rusqlite.workspace = true
# Provisional accelerator (§5): Public Suffix List как compiled-in static
# таблица (без runtime I/O, без зависимостей). Trait-anchor — `PublicSuffixList`
# в lumen-core::ext. Graduation criterion: реалистично — никогда (формат
# PSL стабилен, обновления списка приходят снаружи через bump версии crate-а).
psl = "2"
# Permanent (§5): SHA-256 for per-origin IDB file key derivation (C-5).
# Already in the dependency graph via lumen-js and lumen-network (sha2 0.10).
sha2 = "0.10"
# Provisional (§5): deflate compression for T3-hibernated DOM blobs (ADR-008 §10J.1).
# Reuses the already-vendored flate2 (PNG iCCP path) — no new external dependency.
# Pure-Rust miniz_oxide backend, cross-OS bit-stable, no C toolchain. Graduation
# criterion: replace with a higher-ratio pure-Rust zstd when one matures.
flate2.workspace = true

[dev-dependencies]
# Integration test only: serialise a real parsed `Document` to verify the
# hibernation blob round-trips and actually shrinks (ADR-008 §10J.1).
lumen-dom = { workspace = true }
lumen-html-parser = { workspace = true }
