[package]
name = "lumen-a11y"
description = "Accessibility tree construction from DOM: ARIA roles, states, and accessible name computation."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lumen-dom = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
lumen-html-parser = { workspace = true }
serde_json = "1"
