[package]
name = "lumen-css-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: CSS tokenizer, parser, and selector engine"

[dependencies]
workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
