[package]
name = "lumen-encoding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: детектор и декодеры однобайтовых кодировок (cp1251, KOI8-R, CP866)"

[dependencies]
lumen-core.workspace = true
icu_segmenter = { version = "2", features = ["compiled_data"] }
icu_provider = { version = "2", features = ["sync"] }
unicode-bidi = "0.3"
