[package]
name = "lumen-font"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: TrueType / OpenType парсер и растеризатор глифов"

[dependencies]
lumen-core.workspace = true
brotli-decompressor = "5"
zune-inflate = "0.2"
workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
