[package]
name = "lumen-html-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: HTML5 tokenizer and tree construction"

[dependencies]
lumen-core.workspace = true
lumen-dom.workspace = true
workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
