[package]
name = "lumen-layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: layout engine (block + inline for Phase 0)"

[dependencies]
lumen-core.workspace = true
lumen-dom.workspace = true
lumen-css-parser.workspace = true
lumen-html-parser.workspace = true
lumen-image.workspace = true
