[package]
name = "lumen-layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: layout engine (block + inline for Phase 0)"

[dependencies]
lumen-core.workspace = true
lumen-dom.workspace = true
lumen-css-parser.workspace = true
lumen-html-parser.workspace = true
lumen-image.workspace = true
# ADR-016 M4.1: parallel selector matching for flex/grid/table item containers.
# Permanent dep: work-stealing parallelism for independent sibling style computations.
rayon = "1"
workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
