[package]
name = "lumen-paint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: display list and rasterization"

[dependencies]
lumen-core.workspace = true
lumen-dom.workspace = true
lumen-layout.workspace = true
lumen-font.workspace = true
lumen-image.workspace = true

# Exception #1 + #2 из §5: wgpu-surface привязан к winit-окну; оба опциональны
# и гейтируются фичей backend-wgpu (ADR-010).
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

# femtovg + glutin — Phase 2 rendering backend (ADR-010 RB-5).
# Why this dependency: femtovg is a stable 2D GPU renderer (OpenGL ES 2.0) that covers
# every DisplayCommand natively (paths, gradients, text, clips, layers). It eliminates
# hand-written WGSL shaders. Provisional tier — promoted to permanent when femtovg
# becomes default backend (Phase 2). glutin provides cross-platform OpenGL context
# creation; glutin-winit bridges glutin with winit 0.30 windows.
femtovg = { version = "0.9", optional = true, default-features = false }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
# imgref and rgb are direct deps of femtovg 0.9; we use them to pass image data to Canvas.
imgref = { version = "1.10", optional = true }
rgb = { version = "0.8", optional = true }

# CPU-рендеринг для детерминистичных тестов без GPU (8A.5)
tiny-skia = { version = "0.11", optional = true }

[dev-dependencies]
lumen-html-parser.workspace = true
lumen-css-parser.workspace = true
lumen-layout.workspace = true
lumen-core.workspace = true

[features]
# Phase 1 (текущий): wgpu DX12/Vulkan/Metal
default = ["backend-wgpu"]

# wgpu-бэкенд — текущий Phase 1 бэкенд (ADR-010 §Migration path)
backend-wgpu = ["dep:wgpu", "dep:winit"]

# femtovg-бэкенд — Phase 2 default (ADR-010 §Migration path, RB-5)
backend-femtovg = ["dep:femtovg", "dep:glutin", "dep:glutin-winit", "dep:winit", "dep:imgref", "dep:rgb"]

# vello-бэкенд — Phase 3 default (dep:vello добавляется в RB-10)
backend-vello = []

# CPU-рендеринг (tiny-skia) — CI без GPU и CompareBackend (ADR-010)
backend-cpu = []

# CompareBackend: параллельный рендер двумя бэкендами + pixel diff (RB-8)
compare = []

# Обратная совместимость: lumen-driver использует lumen-paint/cpu-render
cpu-render = ["tiny-skia"]
