[package]
name = "lumen-paint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lumen: display list and rasterization"

[dependencies]
lumen-core.workspace = true
lumen-dom.workspace = true
lumen-layout.workspace = true
lumen-font.workspace = true
lumen-image.workspace = true

# Exception #1 + #2 из §5: wgpu-surface привязан к winit-окну; оба опциональны
# и гейтируются фичей backend-wgpu (ADR-010).
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

# CPU-рендеринг для детерминистичных тестов без GPU (8A.5)
tiny-skia = { version = "0.11", optional = true }

[dev-dependencies]
lumen-html-parser.workspace = true
lumen-css-parser.workspace = true
lumen-layout.workspace = true
lumen-core.workspace = true

[features]
# Experimental branch (p1-exp-wgpu-only): wgpu is the ONLY windowed backend.
# OpenGL (femtovg + glutin) removed entirely.
default = ["backend-wgpu"]

# wgpu-бэкенд — единственный оконный бэкенд экспериментальной ветки
backend-wgpu = ["dep:wgpu", "dep:winit"]

# vello-бэкенд — Phase 3 default (dep:vello добавляется в RB-10)
backend-vello = []

# CPU-бэкенд (tiny-skia) — headless CI без GPU; реализует RenderBackend (ADR-010 RB-8)
backend-cpu = ["cpu-render"]

# CompareBackend: параллельный рендер двумя бэкендами + pixel diff (RB-8)
# Требует два бэкенда с screenshot_rgba(); по умолчанию подтягивает backend-cpu.
compare = ["backend-cpu"]

# Обратная совместимость: lumen-driver использует lumen-paint/cpu-render
cpu-render = ["tiny-skia"]

# Составная фича для lumen-driver: compare (backend-cpu) + backend-cpu
compare-cpu = ["compare"]
